<resources>
    <string name="app_name">Ex0413</string>

    <!-- activity_main2.xml -->
    <string name="btnWeb">웹 페이지 보기</string>
    <string name="btnCamera">카메라 호출</string>
    <string name="btnDial">전화화면 띄우기</string>
    <string name="btnCall">전화걸기</string>

    <!-- activity_first.xml -->
    <string name="tvFirst_label">First화면</string>
    <string name="btnFirst_text1">second로 이동</string>
    <string name="edtData_hint">입력하시오</string>
    <string name="btnThird_text2">third로 이동</string>
    <string name="btnCapture_text">사진찍기</string>

    <!-- activity_Second -->
    <string name="tvSecond_label">Second화면</string>
    <string name="btnSecond">First로 이동</string>

    <!-- activity_Third -->
    <string name="btnThird">First로 이동</string>

    <!-- activity_kakao_login -->
    <string name="edtEmail_hint">이메일</string>
    <string name="edtPw_hint">비밀번호</string>
    <string name="login_text">로그인</string>
    <string name="CheckBox_label">잠금모드로 자동로그인</string>
    <string name="tv1_label">모바일에서 카카오 계정을 확인할 수 있습니다.</string>
    <string name="tv2_label">카카오 계정 안내</string>
    <string name="edit_text">비밀번호를 잊어버리셨나요?</string>

    <!-- activity_login_reault -->

</resources>